--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "types": ["three", "@react-three/fiber"],
     "jsx": "preserve",
     "incremental": true,
     "plugins": [
